--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@kahmannf/iterable-transforms": "^1.0.4",
     "express": "^4.17.1"
   },
   "devDependencies": {
